fix users' <li> spacing

--- a/frontend/src/Modules/WordState/style.module.scss
+++ b/frontend/src/Modules/WordState/style.module.scss
@@ -18,6 +18,7 @@
   align-items: center;
   margin-top: 8rem;
   li {
+    margin-top: 2rem;
     list-style: circle;
     cursor: pointer;
   }
